@@ -7290,3 +7290,5 @@
 	  counter (2014-5-5).
 	* configs/sam4s-xplained-pro:  Clean-up of LED usage and also some
 	  integration of new timer features.  From Bob Doiron  (2014-5-5).
+	* drivers/timer.c and include/nuttx/timer.h:  Timer driver updates from
+	  Bob Doiron (2014-5-5).
